--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
 <body ng-csp="" ng-app="dbProject">
 	
 <ion-nav-view class="background"></ion-nav-view>
+<script src="lib/ionic-rating/ionic-rating.js"></script>
  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
 <script src="lib/angular-websocket/angular-websocket.js"></script>
